--- a/metrics/integration/testem_page.html
+++ b/metrics/integration/testem_page.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>
-        Mapbox GL JS Integration Tests
+        Trackasia GL JS Integration Tests
     </title>
 </head>
 <body>
